Closed Bug 634669 Opened 15 years ago Closed 14 years ago

transform stresstest is broken on d3d9

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: jrmuizel, Assigned: bas.schouten)

References

()

Details

(Whiteboard: [hardblocker][has patch])

Attachments

(2 files)

Assignee: nobody → bas.schouten
blocking2.0: --- → ?
OS: Mac OS X → Windows 7
We are hardblocking beta on the investigation of this. We have no knowledge of what's wrong or how badly things are broken. We'll re-triage once we do know. (And we will add a bloody test when this is fixed!!!!)
blocking2.0: ? → betaN+
OS: Windows 7 → Mac OS X
Whiteboard: [hardblocker]
OS: Mac OS X → Windows XP
Attachment #512903 - Flags: review?(matt.woodrow+bugzilla)
When doing single channel alpha surfaces, we should use the scaled size for our windows surface or we won't be able to draw the whole area.
Attachment #512904 - Flags: review?(matt.woodrow+bugzilla)
Attachment #512903 - Flags: review?(matt.woodrow+bugzilla) → review+
Comment on attachment 512904 [details] [diff] [review] Use the scaled size for our temporary windows surface Nice rebase failure by me, thanks for this Bas.
Attachment #512904 - Flags: review?(matt.woodrow+bugzilla) → review+
Whiteboard: [hardblocker] → [hardblocker][has patch]
Is this good to land?
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
That's what I'm talking about.
Verified on Build identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b12) Gecko/20100101 Firefox/4.0b12
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: