Bug 634669: Use scaled size for our drawing surface. r=mattwoodrow a=blocking-betan